Ill fix it later...
White space on bottom when using mobile devices.

--- a/assets/style.css
+++ b/assets/style.css
@@ -9,7 +9,6 @@ background-image:url('background.jpg');
     background-repeat: no-repeat;
     overflow: hidden;
    height: 100%;
-   outline-color:red;
 }
 
     body {           
@@ -22,7 +21,6 @@ background-image:url('background.jpg');
         position: absolute;
         height: 100%;
         width: 100%;
-    outline-color:red
         }
     #content{
     background:rgba(0,0,0,0.7);
@@ -32,11 +30,9 @@ background-image:url('background.jpg');
     border-top-right-radius: 100px;
     border-bottom-right-radius: 100px;
     border-right: 3px dashed rgb(58, 62, 88);
-    outline-color:red
     }
 #actions{
  height: 100%;
-outline-color:red
 }
 @media(max-width: 359px){
     html {
